:bug: blockquote overflow

--- a/_scss/markdown.scss
+++ b/_scss/markdown.scss
@@ -81,6 +81,7 @@
     color: #4a4a4a;
     margin: 20px 0;
     line-height: 1.625;
+    overflow-y: scroll;
   }
 
   blockquote:before {
